# lua-compiler

./: .clang-format  CMakeLists.txt
include/: ast.hpp  ast_node.hpp  bytecode_generator.hpp  compilation.hpp  error.hpp  instructions.hpp  native_functions.hpp  overloads.hpp  parser.hpp  scanner.hpp  symbol_table.hpp  token.hpp  value.hpp  virtual_machine.hpp
src/: CMakeLists.txt  ast.cpp  ast_node.cpp  bytecode_generator.cpp  compilation.cpp  instructions.cpp  main.cpp  native_functions.cpp  parser.cpp  scanner.cpp  value.cpp  virtual_machine.cpp
tests/: CMakeLists.txt  parser.cpp  update.cpp  virtual_machine.cpp
tests/expected/: assignment.json  binary_operators.json  function_declaration.json  local_declarations.json  numeric_for_loop.json  postfix_operators.json  repeat_loop.json
tests/failure/: missing_atom.lua
tests/input/: assignment.lua  binary_operators.lua  function_declaration.lua  local_declarations.lua  repeat_loop.lua  while_loop.lua
tests/parser/: CMakeLists.txt  parser.cpp  update.cpp
tests/parser/expected/: conditionals.json  generic_for_loop.json  numeric_for_loop.json  tables.json  while_loop.json
tests/parser/failure/: break_outside_loop.lua  invalid_assignment_variable.lua  malformed_number.lua  unexpected_expression.lua
tests/parser/input/: conditionals.lua  generic_for_loop.lua  postfix_operators.lua  tables.lua
tests/virtual_machine/: CMakeLists.txt  assignment.lua  binary_operators.lua  conditionals.lua  functions.lua  loops.lua  tables.lua
